2006-11-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/HTMLDocument.java
	(HTMLReader.ParagraphAction.end): Call super instead of blockClose()
	directly.
	(HTMLReader.ParagraphAction.start): Call super instead of blockOpen()
	directly.
	(HTMLReader.parseStack): Removed.
	(HTMLReader.blockClose): Simply call addContent() with ' '
	instead of doing more complicated stuff. Removed parseStack
	handling.
	(HTMLReader.blockOpen): Removed parseStack handling.
	(getInsertingReader): Removed parseStack init.
	* gnu/javax/swing/text/html/parser/htmlValidator.java
	(closeTag): Return true only when the tag actually should be
	closed.
	* gnu/javax/swing/text/html/parser/support/Parser.java
	(_handleEndTag): Only actually close the tag when the validator
	allows it.

2006-11-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/CSS.java
	(Attribute.BORDER_SPACING): New field for the CSS border-spacing
	attribute.
	* javax/swing/text/html/StyleSheet.java
	(BoxPainter.bottomPadding): New field.
	(BoxPainter.leftPadding): New field.
	(BoxPainter.rightPadding): New field.
	(BoxPainter.topPadding): New field.
	(BoxPainter.BoxPainter): Fetch the MARGIN and PADDING* attributes
	too.
	(BoxPainter.getInset): Recognize and include the padding.
	(translateHTMLToCSS): Added mapping for CELLPADDING and CELLSPACING.
	 javax/swing/text/html/TableView.java
	(RowView.calculateMajorAxisRequirements): Adjust req's for
	cellSpacing.
	(RowView.layoutMajorAxis): Adjust multi-column span for cellSpacing.
	(cellSpacing): New field.
	(columnRequirements): Made package private to avoid accessor method.
	(calculateMinorAxisRequirements): Include cellSpacing.
	(calculateMajorAxisRequirements): Overridden to include cellSpacing.
	(layoutMajorAxis): Likewise.
	(layoutColumns): Respect cellSpacing.
	(setParent): Overridden to fetch the CSS attributes when view gets
	connected.
	(setPropertiesFromAttributes): New method. Fetches the cell
	spacing from the CSS attributes.
